Fix some CSS bleeding from React between ManagerPage and OrderPage

--- a/app/src/css/ManagerPage.module.css
+++ b/app/src/css/ManagerPage.module.css
@@ -44,7 +44,7 @@ body {
   padding: 0px;
 }
 
-h1 {
+.managerh1 {
   color: #d51818;
   text-align: center;
 }
